8146286: aarch64: guarantee failures with large code cache sizes on jtreg test java/lang/invoke/LFCaching/LFMultiThreadCachingTest.java

Patch trampoline calls with special case bl to itself which does not cause guarantee failure

Reviewed-by: aph